testsuite/tests/ghc-regress/typecheck/should_fail/tcfail110.stderr

tcfail110.hs:8:
    Kind error: `Foo a' is not applied to enough type arguments
    In the type: String -> (forall a. Foo a) -> IO ()
    While checking the type signature for `bar'
